Recipe: fix jumping title when animating

--- a/client/templates/recipe.import.less
+++ b/client/templates/recipe.import.less
@@ -56,7 +56,9 @@
 
     .metadata-wrapper {
       .transform(translate3d(0,0,0));
+      max-height: 10em;
       opacity: 1;
+      overflow: hidden;
     }
 
     .description-recipe {
@@ -189,7 +191,7 @@
 
   .metadata-wrapper {
     .transform(translate3d(0,100%,0));
-    .position(absolute, auto,auto, 3em, auto);
+    max-height: 0;
     opacity: 0;
   }
 }
